--- a/src/plugins/debugger/breakpoint.ui
+++ b/src/plugins/debugger/breakpoint.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>BreakpointDialog</class>
+ <widget class="QDialog" name="BreakpointDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>382</width>
-    <height>252</height>
+    <height>280</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,28 +24,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QComboBox" name="comboBoxType">
-       <item>
-        <property name="text">
-         <string>File and Line Number</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Function Name</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Function &quot;main()&quot;</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Address</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="comboBoxType"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="labelFileName">
@@ -149,7 +128,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>BreakpointDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -165,7 +144,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>BreakpointDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
