--- a/src/plugins/debugger/gdb/gdboptionspage.ui
+++ b/src/plugins/debugger/gdb/gdboptionspage.ui
@@ -132,7 +132,7 @@ name in different directories.</string>
       <item row="8" column="0" colspan="2">
        <widget class="QCheckBox" name="checkBoxAdjustBreakpointLocations">
         <property name="text">
-         <string>Adjust Breakpoint Locationss</string>
+         <string>Adjust Breakpoint Locations</string>
         </property>
        </widget>
       </item>
