--- a/src/plugins/fakevim/fakevimoptions.ui
+++ b/src/plugins/fakevim/fakevimoptions.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>472</width>
-    <height>420</height>
+    <height>421</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -77,6 +77,16 @@
        <widget class="QCheckBox" name="checkBoxSmartTab">
         <property name="text">
          <string>Smart tabulators</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QCheckBox" name="checkBoxPassControlKey">
+        <property name="toolTip">
+         <string>Checking this box passes key sequences like Ctrl-S to the Creator core instead of interpreting them in FakeVim. This gives easier access to Creator core functionality at the price of losing some features of FakeVim.</string>
+        </property>
+        <property name="text">
+         <string>Pass control key</string>
         </property>
        </widget>
       </item>
