--- a/src/plugins/qmldesigner/qtquickplugin/qtquickplugin.qrc
+++ b/src/plugins/qmldesigner/qtquickplugin/qtquickplugin.qrc
@@ -1,6 +1,6 @@
 <RCC>
-    <qresource prefix="/fxplugin">
-        <file>fx.metainfo</file>
+    <qresource prefix="/qtquickplugin">
+        <file>quick.metainfo</file>
         <file>images/template_image.png</file>
         <file>images/item-icon.png</file>
         <file>images/rect-icon.png</file>
