Fix resource paths in ui files of QmlJsEditor

--- a/src/libs/qmleditorwidgets/contextpanewidgetborderimage.ui
+++ b/src/libs/qmleditorwidgets/contextpanewidgetborderimage.ui
@@ -152,7 +152,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/horizontal-scale-icon.png</normaloff>:/qmldesigner/images/horizontal-scale-icon.png</iconset>
         </property>
         <property name="iconSize">
@@ -172,7 +172,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/tile-icon-hor-crop.png</normaloff>:/qmldesigner/images/tile-icon-hor-crop.png</iconset>
         </property>
         <property name="iconSize">
@@ -192,7 +192,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/tile-icon-hor - scale.png</normaloff>:/qmldesigner/images/tile-icon-hor - scale.png</iconset>
         </property>
         <property name="iconSize">
@@ -224,7 +224,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/tile-icon-vert-crop.png</normaloff>:/qmldesigner/images/tile-icon-vert-crop.png</iconset>
         </property>
         <property name="iconSize">
@@ -244,7 +244,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/vertical-scale-icon.png</normaloff>:/qmldesigner/images/vertical-scale-icon.png</iconset>
         </property>
         <property name="iconSize">
@@ -264,7 +264,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/resources.qrc">
+         <iconset resource="resources.qrc">
           <normaloff>:/qmldesigner/images/tile-icon-vert-scale.png</normaloff>:/qmldesigner/images/tile-icon-vert-scale.png</iconset>
         </property>
         <property name="iconSize">
@@ -304,7 +304,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/resources.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections/>
 </ui>
