--- a/src/libs/qmleditorwidgets/contextpanewidgetimage.ui
+++ b/src/libs/qmleditorwidgets/contextpanewidgetimage.ui
@@ -63,7 +63,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/scale-icon.png</normaloff>:/qmldesigner/images/scale-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -83,7 +83,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/horizontal-scale-icon.png</normaloff>:/qmldesigner/images/horizontal-scale-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -103,7 +103,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/vertical-scale-icon.png</normaloff>:/qmldesigner/images/vertical-scale-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -123,7 +123,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/tile-icon.png</normaloff>:/qmldesigner/images/tile-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -143,7 +143,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/aspect-fit-icon.png</normaloff>:/qmldesigner/images/aspect-fit-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -163,7 +163,7 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../resources/resources.qrc">
+      <iconset resource="resources.qrc">
        <normaloff>:/qmldesigner/images/aspect-crop-icon.png</normaloff>:/qmldesigner/images/aspect-crop-icon.png</iconset>
      </property>
      <property name="iconSize">
@@ -289,7 +289,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/resources.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections/>
 </ui>
